# Data-Distill

Free1.0ui+backend/: builder_invariants.md  project_invariants.md
Premium2.0ui+backend/: V2FREEZE.md
Premium3.0FullCLI-of1.0&2.0ENGINE/: V3FREEZE.md
conversation-canonicalizer/: README.md  pyproject.toml
conversation-canonicalizer/docs/: PHASE1_SCOPE.md  SUPPORTED_FORMAT.md
conversation-canonicalizer/fixtures/: sample_ambiguous_export.json  sample_lossy_export.json  sample_supported_export.json
conversation-canonicalizer/src/engine/canonical/: canonical_builder.py  flag_emitter.py  message_normalizer.py
conversation-canonicalizer/src/engine/export/: canonical_json_writer.py  canonical_jsonl_writer.py
conversation-canonicalizer/src/engine/parse/: json_export_parser.py  raw_record_builder.py
conversation-canonicalizer/src/engine/source/: file_loader.py  source_registry.py
conversation-canonicalizer/src/schemas/: canonical_record.py  flags.py  raw_record.py  source_file.py
conversation-canonicalizer/src/viewer/: app.py  conversation_detail.py  conversation_list.py
conversation-canonicalizer/tests/: test_canonical.py  test_export.py  test_parse.py  test_source.py  test_viewer_smoke.py
docs/plans/: conversation_canonicalizer_phase1_contract.md  conversation_canonicalizer_phase1_plan.md
